--- a/square.html
+++ b/square.html
@@ -52,7 +52,7 @@
                     </li>
                 </ul>
                 <a class="btn my-button btn-sm lift" href="../signup-cover.html" title="">Sing up</a>
-                <a class=" btn btn-danger btn-sm bg-mypink ml-lg-2 lift" href="../signin-cover.html" title="">Log in</a>
+                <a class=" btn btn-danger btn-sm bg-mypink ml-lg-2 lift" href="log-in.html" title="">Log in</a>
             </div>
         </nav>
         <section class="squarefor bg">
