--- a/square.html
+++ b/square.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="#" title="">Contact</a>
                     </li>
                 </ul>
-                <a class="btn my-button btn-sm lift" href="../signup-cover.html" title="">Sing up</a>
+                <a class="btn my-button btn-sm lift" href="sing-up.html" title="">Sing up</a>
                 <a class=" btn btn-danger btn-sm bg-mypink ml-lg-2 lift" href="log-in.html" title="">Log in</a>
             </div>
         </nav>
