--- a/log-in.html
+++ b/log-in.html
@@ -21,24 +21,26 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-5 text-form">
-                    <h1 class="pb-3">Log in</h1>
-                    <form>
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@address.com">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your Password">
-                        </div>
-                        <div class="form-group form-check text-right">
-                            <label class="form-check-label " for="exampleCheck1">forgot password?</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary lift mybutton">sing up</button>
-                        <p>Don't have an account yet? <a href="#" title="">Contact Us</a></p>
-                    </form>
+                    <div>
+                        <h1 class="pb-3">Log in</h1>
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@address.com">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your Password">
+                            </div>
+                            <div class="form-group form-check text-right">
+                                <label class="form-check-label " for="exampleCheck1">forgot password?</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary lift mybutton">log in</button>
+                            <p>Don't have an account yet? <a href="#" title="">Contact Us</a></p>
+                        </form>
+                    </div>
                 </div>
-                <div class="col-lg-7 d-none d-lg-block">
+                <div class="col-lg-7 d-none d-lg-block pr-0">
                     <div class="bg-cover">
                     </div>
                 </div>
