--- a/sing-up.html
+++ b/sing-up.html
@@ -21,22 +21,24 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-5 text-form">
-                    <h1 class="pb-3">Log in</h1>
-                    <p class="pb-3">Simplify your workflow in minutes</p>
-                    <form>
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@address.com">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your Password">
-                        </div>
-                        <button type="submit" class="btn btn-primary lift mybutton">sing up</button>
-                        <p>Already have an account? <a href="#" title="">Log in</a></p>
-                    </form>
+                    <div>
+                        <h1 class="pb-3">Sing up</h1>
+                        <p class="pb-3">Simplify your workflow in minutes</p>
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@address.com">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter your Password">
+                            </div>
+                            <button type="submit" class="btn btn-primary lift mybutton">sing up</button>
+                            <p>Already have an account? <a href="log-in.html" title="">Log in</a></p>
+                        </form>
+                    </div>
                 </div>
-                <div class="col-lg-7 d-none d-lg-block">
+                <div class="col-lg-7 d-none d-lg-block pr-0">
                     <div class="bg-cover">
                         <div>
                             <svg viewBox="0 0 100 1544" fill="none" xmlns="http://www.w3.org/2000/svg">
