--- a/square.html
+++ b/square.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="#" title="">Home</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link" href="#" title="">Players</a>
+                        <a class="nav-link" href="players/playders.html" title="">Players</a>
                     </li>
                     <li class="nav-item px-3">
                         <a class="nav-link" href="#" title="">Creative Lap</a>
